Fix alignment issue in Chrome and Safari

--- a/src/assets/styles/04_elements/_top-link.scss
+++ b/src/assets/styles/04_elements/_top-link.scss
@@ -1,5 +1,5 @@
 .top-link {
-  align-items: end;
+  align-items: flex-end;
   background-repeat: no-repeat;
   background-size: contain;
   display: inline-flex;
